firefox menu overlay not showing problem fixed

--- a/src/components/sections/MenuOverlay.module.css
+++ b/src/components/sections/MenuOverlay.module.css
@@ -1,5 +1,5 @@
 .box {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     height: 0%;
@@ -26,8 +26,6 @@
 .menu {
     height: 0;
     opacity: 0;
-    scale: 0;
-
     transition: all 0.3s ease-in-out;
 }
 
